--- a/static/css/chat-room.css
+++ b/static/css/chat-room.css
@@ -148,16 +148,10 @@
   justify-content: flex-start;
   padding: 0 40px;
 }
-.div17,
-.helena {
+.div17 {
   align-self: stretch;
   position: relative;
   line-height: 150%;
-}
-.helena {
-  font-weight: 500;
-}
-.div17 {
   font-size: var(--presets-body2-size);
   color: var(--color-darkslategray-100);
   overflow: hidden;
@@ -297,10 +291,6 @@
   line-height: 150%;
   font-weight: 500;
 }
-.helena-hills {
-  display: inline-block;
-  min-width: 113px;
-}
 .will-head-to {
   align-self: stretch;
   font-size: var(--presets-body2-size);
@@ -309,7 +299,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.text {
+.text,
+.text1,
+.text2,
+.text3,
+.text4,
+.text5,
+.text6,
+.text7{
   align-self: stretch;
   flex-direction: column;
 }
@@ -327,13 +324,20 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation {
-  display: flex;
+.conversation,
+.conversation1,
+.conversation2,
+.conversation3,
+.conversation4,
+.conversation5,
+.conversation6,
+.conversation7{
+  align-self: stretch;
+  border-radius: var(--br-5xs);
   flex-direction: row;
   flex-wrap: wrap;
   padding: var(--padding-xs) var(--padding-base);
   gap: var(--gap-base);
-  background-color: var(--color-whitesmoke-200);
 }
 .avatar-child {
   height: 64px;
@@ -358,7 +362,14 @@
   position: relative;
   line-height: 150%;
 }
-.oscar-davis {
+.helena-hills,
+.oscar-davis,
+.daniel-jay-park,
+.mark-rojas,
+.giannis-constantinou,
+.briana-lewis,
+.mom,
+.sherry-roy{
   font-weight: 500;
   display: inline-block;
   min-width: 115px;
@@ -370,10 +381,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text1 {
-  align-self: stretch;
-  flex-direction: column;
 }
 .conversation1,
 .text-wrapper,
@@ -389,14 +396,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation1 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon2 {
   height: 64px;
   width: 64px;
@@ -411,9 +410,6 @@
   position: relative;
   line-height: 150%;
 }
-.daniel-jay-park {
-  font-weight: 500;
-}
 .lol-yeah-are {
   align-self: stretch;
   font-size: var(--presets-body2-size);
@@ -421,10 +417,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text2 {
-  align-self: stretch;
-  flex-direction: column;
 }
 .conversation2,
 .text-container,
@@ -440,14 +432,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation2 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon3 {
   height: 64px;
   width: 64px;
@@ -462,11 +446,6 @@
   position: relative;
   line-height: 150%;
 }
-.mark-rojas {
-  font-weight: 500;
-  display: inline-block;
-  min-width: 106px;
-}
 .great-catching-up {
   align-self: stretch;
   font-size: var(--presets-body2-size);
@@ -474,10 +453,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text3 {
-  align-self: stretch;
-  flex-direction: column;
 }
 .conversation3,
 .text-frame,
@@ -493,14 +468,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation3 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon4 {
   height: 64px;
   width: 64px;
@@ -509,11 +476,6 @@
   overflow: hidden;
   flex-shrink: 0;
   object-fit: contain;
-}
-.giannis-constantinou {
-  position: relative;
-  line-height: 150%;
-  font-weight: 500;
 }
 .text4,
 .yep {
@@ -527,9 +489,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text4 {
-  flex-direction: column;
 }
 .conversation4,
 .text-wrapper1,
@@ -545,14 +504,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation4 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon5 {
   height: 64px;
   width: 64px;
@@ -567,11 +518,6 @@
   position: relative;
   line-height: 150%;
 }
-.briana-lewis {
-  font-weight: 500;
-  display: inline-block;
-  min-width: 121px;
-}
 .when-are-you {
   align-self: stretch;
   font-size: var(--presets-body2-size);
@@ -579,10 +525,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text5 {
-  align-self: stretch;
-  flex-direction: column;
 }
 .conversation5,
 .text-wrapper2,
@@ -598,14 +540,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation5 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon6 {
   height: 64px;
   width: 64px;
@@ -614,13 +548,6 @@
   overflow: hidden;
   flex-shrink: 0;
   object-fit: contain;
-}
-.mom {
-  position: relative;
-  line-height: 150%;
-  font-weight: 500;
-  display: inline-block;
-  min-width: 48px;
 }
 .text6,
 .thanks {
@@ -634,9 +561,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text6 {
-  flex-direction: column;
 }
 .conversation6,
 .text-wrapper3,
@@ -652,14 +576,6 @@
   box-sizing: border-box;
   min-width: 187px;
 }
-.conversation6 {
-  align-self: stretch;
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
-}
 .avatar-icon7 {
   height: 64px;
   width: 64px;
@@ -674,11 +590,6 @@
   position: relative;
   line-height: 150%;
 }
-.sherry-roy {
-  font-weight: 500;
-  display: inline-block;
-  min-width: 105px;
-}
 .jack-needs-to {
   align-self: stretch;
   font-size: var(--presets-body2-size);
@@ -686,10 +597,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-.text7 {
-  align-self: stretch;
-  flex-direction: column;
 }
 .chat-list,
 .conversation7,
@@ -709,13 +616,6 @@
 .chat-list,
 .conversation7 {
   align-self: stretch;
-}
-.conversation7 {
-  border-radius: var(--br-5xs);
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding: var(--padding-xs) var(--padding-base);
-  gap: var(--gap-base);
 }
 .chat-list {
   flex-direction: column;
@@ -765,11 +665,6 @@
 .helena-hills1 {
   position: relative;
   line-height: 150%;
-}
-.helena-hills1 {
-  font-weight: 500;
-  display: inline-block;
-  min-width: 90px;
 }
 .div18 {
   align-self: stretch;
@@ -822,6 +717,8 @@
   box-sizing: border-box;
 }
 .chat-header {
+  display: flex;
+  align-items: center;
   align-self: stretch;
   background-color: var(--palette-white);
   border-bottom: 1px solid var(--color-gainsboro-100);
@@ -830,6 +727,31 @@
   justify-content: space-between;
   padding: var(--padding-base) var(--padding-5xl) var(--padding-sm);
   gap: var(--gap-xl);
+}
+.message-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.9em;
+    color: #555;
+    margin-bottom: 5px;
+}
+.message-sender {
+    font-weight: bold;
+    font-size: 1em; /* 调整字体大小 */
+    color: #888; /* 字体颜色 */
+    margin-right: 10px; /* 与时间戳之间的间距 */
+    display: inline-block; /* 确保发件人名字和时间戳在同一行 */
+}
+.message-timestamp {
+    font-size: 0.8em;
+    color: #888;
+}
+.message-body {
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 5px;
+    position: relative;
 }
 .no-honestly-im {
   position: relative;
@@ -963,19 +885,6 @@
   display: inline-block;
   min-width: 52px;
 }
-.simple-wrapper {
-  cursor: pointer;
-  border: 0;
-  padding: var(--padding-xs) var(--padding-base);
-  background-color: var(--color-black);
-  border-radius: var(--br-base) var(--br-base) var(--br-9xs) var(--br-base);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  max-width: 480px;
-}
 .you-just-edit {
   flex: 1;
   position: relative;
@@ -983,18 +892,6 @@
   font-weight: 500;
   display: inline-block;
   max-width: 100%;
-}
-.you-just-edit-any-text-to-type-wrapper {
-  width: 100%;
-  border-radius: var(--br-base) var(--br-base) var(--br-9xs) var(--br-base);
-  background-color: var(--color-black);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-xs) var(--padding-base);
-  box-sizing: border-box;
-  max-width: 480px;
 }
 .boom {
   position: relative;
@@ -1007,15 +904,6 @@
 .bubbles1 {
   display: flex;
   box-sizing: border-box;
-}
-.boom-wrapper {
-  border-radius: var(--br-base) var(--br-base) var(--br-9xs) var(--br-base);
-  background-color: var(--color-black);
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-xs) var(--padding-base);
-  max-width: 480px;
 }
 .bubbles1 {
   align-self: stretch;
@@ -1033,17 +921,6 @@
   display: inline-block;
   min-width: 55px;
 }
-.hmmm-wrapper {
-  border-radius: var(--br-5xl) var(--br-base) var(--br-base) var(--br-9xs);
-  background-color: var(--color-gainsboro-100);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-xs) var(--padding-base);
-  box-sizing: border-box;
-  max-width: 480px;
-}
 .i-think-i {
   position: relative;
   font-size: var(--presets-body2-size);
@@ -1055,7 +932,12 @@
   display: inline-block;
   min-width: 99px;
 }
-.i-think-i-get-it-wrapper {
+.simple-wrapper,
+.boom-wrapper,
+.hmmm-wrapper,
+.will-head-to,
+.i-think-i-get-it-wrapper,
+.you-just-edit-any-text-to-type-wrapper{
   cursor: pointer;
   border: 0;
   padding: var(--padding-xs) var(--padding-base);
@@ -1077,18 +959,6 @@
   line-height: 150%;
   font-weight: 500;
 }
-.will-head-to-the-help-center-i-wrapper {
-  border-radius: var(--br-5xl) var(--br-base) var(--br-base) var(--br-9xs);
-  background-color: var(--color-gainsboro-100);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: var(--padding-xs) var(--padding-base);
-  box-sizing: border-box;
-  max-width: 480px;
-  white-space: nowrap;
-}
 .bubbles2,
 .messages {
   align-self: stretch;
@@ -1109,7 +979,7 @@
   gap: var(--gap-16xl);
   max-width: 100%;
   background-color: #f1f1f1; /* 背景颜色 */
-  border-radius: 5px; /* 圆角 */
+  border-radius: 0; /* 无圆角 */
   padding: 10px; /* 内边距 */
   margin-bottom: 10px; /* 消息之间的间距 */
 }
@@ -1139,7 +1009,6 @@
   overflow: hidden;
   flex-shrink: 0;
 }
-
 .reply {
   align-self: stretch;
   border-radius: var(--br-5xs);
@@ -1336,7 +1205,13 @@
   overflow-y: auto; /* 使聊天区域可滚动 */
   padding: 10px; /* 添加一些内边距 */
 }
-
+.timestamp {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  font-size: 0.8em;
+  color: #999;
+}
 @media screen and (max-width: 1050px) {
   .chat-components {
     flex: 1;
