--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <title>情感分析聊天對話助手</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main-page.css') }}" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"/>
@@ -65,18 +65,8 @@
                 </textarea>
                 <div class="frame-wrapper2">
                   <div class="left-button-icon-parent">
-                    <img
-                      class="left-button-icon"
-                      loading="lazy"
-                      alt=""
-                      src="{{url_for('static', filename='image/vector.svg')}}"
-                    />
-
-                    <img
-                      class="right-button-icon"
-                      alt=""
-                      src="{{url_for('static', filename='image/vector1.svg')}}"
-                    />
+                    <img class="left-button-icon" loading="lazy" alt="" src="{{url_for('static', filename='image/vector.svg')}}"/>
+                    <img class="right-button-icon" alt="" src="{{url_for('static', filename='image/vector1.svg')}}"/>
                   </div>
                 </div>
               </div>
@@ -103,253 +93,62 @@
             </div>
             <div class="first-connection-parent">
               <div class="first-connection">
-                <img
-                  class="first-connection-icons"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-2.svg')}}"
-                />
-
-                <img
-                  class="connection-icon"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-3.svg')}}"
-                />
-
-                <img
-                  class="connection-icon1"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-4.svg')}}"
-                />
-
-                <img
-                  class="first-connection-icons1"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-5.svg')}}"
-                />
-
-                <img
-                  class="connection-icon2"
-                  alt=""
-                  src="./public/vector-6.svg"
-                />
-
-                <img
-                  class="connection-icon3"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-7.svg')}}"
-                />
+                <img class="first-connection-icons" alt="" src="{{url_for('static', filename='image/vector-2.svg')}}"/>
+                <img class="connection-icon" alt="" src="{{url_for('static', filename='image/vector-3.svg')}}"/>
+                <img class="connection-icon1" alt="" src="{{url_for('static', filename='image/vector-4.svg')}}"/>
+                <img class="first-connection-icons1" alt="" src="{{url_for('static', filename='image/vector-5.svg')}}"/>
+                <img class="connection-icon2" alt="" src="./public/vector-6.svg"/>
+                <img class="connection-icon3" alt="" src="{{url_for('static', filename='image/vector-7.svg')}}"/>
 
                 <div class="connection-icon4">
-                  <img
-                    class="connection-icon-pair"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-8.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon5"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-9.svg')}}"
-                  />
+                  <img class="connection-icon-pair" alt="" src="{{url_for('static', filename='image/vector-8.svg')}}"/>
+                  <img class="connection-icon5" alt="" src="{{url_for('static', filename='image/vector-9.svg')}}"/>
                 </div>
                 <div class="second-connection">
-                  <img
-                    class="connection-icon6"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-10.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon7"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-11.svg')}}"
-                  />
-
-                  <img
-                    class="second-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-12.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon8"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-13.svg')}}"
-                  />
-
-                  <img
-                    class="second-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-14.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon9"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-15.svg')}}"
-                  />
+                  <img class="connection-icon6" alt="" src="{{url_for('static', filename='image/vector-10.svg')}}"/>
+                  <img class="connection-icon7" alt="" src="{{url_for('static', filename='image/vector-11.svg')}}"/>
+                  <img class="second-connection-icons" alt="" src="{{url_for('static', filename='image/vector-12.svg')}}"/>
+                  <img class="connection-icon8" alt="" src="{{url_for('static', filename='image/vector-13.svg')}}"/>
+                  <img class="second-connection-icons1" alt="" src="{{url_for('static', filename='image/vector-14.svg')}}"/>
+                  <img class="connection-icon9" alt="" src="{{url_for('static', filename='image/vector-15.svg')}}"/>
                 </div>
                 <div class="third-connection">
-                  <img
-                    class="connection-icon10"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-16.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon11"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-17.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon12"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-18.svg')}}"
-                  />
+                  <img class="connection-icon10" alt="" src="{{url_for('static', filename='image/vector-16.svg')}}"/>
+                  <img class="connection-icon11" alt="" src="{{url_for('static', filename='image/vector-17.svg')}}"/>
+                  <img class="connection-icon12" alt="" src="{{url_for('static', filename='image/vector-18.svg')}}"/>
                 </div>
                 <div class="fourth-connection">
-                  <img
-                    class="connection-icon13"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-19.svg')}}"
-                  />
-
-                  <img
-                    class="fourth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-20.svg')}}"
-                  />
-
-                  <img
-                    class="fourth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-21.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon14"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-22.svg')}}"
-                  />
+                  <img class="connection-icon13" alt="" src="{{url_for('static', filename='image/vector-19.svg')}}"/>
+                  <img class="fourth-connection-icons" alt="" src="{{url_for('static', filename='image/vector-20.svg')}}"/>
+                  <img class="fourth-connection-icons1" alt="" src="{{url_for('static', filename='image/vector-21.svg')}}"/>
+                  <img class="connection-icon14" alt="" src="{{url_for('static', filename='image/vector-22.svg')}}"/>
                 </div>
-                <img
-                  class="connection-icon15"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-23.svg')}}"
-                />
-
-                <img
-                  class="connection-icon16"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-24.svg')}}"
-                />
-
-                <img
-                  class="connection-icon17"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-25.svg')}}"
-                />
+                <img class="connection-icon15" alt="" src="{{url_for('static', filename='image/vector-23.svg')}}"/>
+                <img class="connection-icon16" alt="" src="{{url_for('static', filename='image/vector-24.svg')}}"/>
+                <img class="connection-icon17" alt="" src="{{url_for('static', filename='image/vector-25.svg')}}"/>
 
                 <div class="fifth-connection">
-                  <img
-                    class="connection-icon18"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-26.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon19"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-27.svg')}}"
-                  />
-
-                  <img
-                    class="fifth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-28.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon20"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-29.svg')}}"
-                  />
-
-                  <img
-                    class="fifth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-30.svg')}}"
-                  />
+                  <img class="connection-icon18" alt="" src="{{url_for('static', filename='image/vector-26.svg')}}"/>
+                  <img class="connection-icon19" alt="" src="{{url_for('static', filename='image/vector-27.svg')}}"/>
+                  <img class="fifth-connection-icons" alt="" src="{{url_for('static', filename='image/vector-28.svg')}}"/>
+                  <img class="connection-icon20" alt="" src="{{url_for('static', filename='image/vector-29.svg')}}"/>
+                  <img class="fifth-connection-icons1" alt="" src="{{url_for('static', filename='image/vector-30.svg')}}"/>
                 </div>
                 <div class="sixth-connection">
-                  <img
-                    class="connection-icon21"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-31.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon22"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-32.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-33.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons1"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-34.svg')}}"
-                  />
-
-                  <img
-                    class="connection-icon23"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-35.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons2"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-36.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons3"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons4"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
-
-                  <img
-                    class="sixth-connection-icons5"
-                    alt=""
-                    src="{{url_for('static', filename='image/vector-37.svg')}}"
-                  />
+                  <img class="connection-icon21" alt="" src="{{url_for('static', filename='image/vector-31.svg')}}"/>
+                  <img class="connection-icon22" alt="" src="{{url_for('static', filename='image/vector-32.svg')}}"/>
+                  <img class="sixth-connection-icons" alt="" src="{{url_for('static', filename='image/vector-33.svg')}}"/>
+                  <img class="sixth-connection-icons1" alt="" src="{{url_for('static', filename='image/vector-34.svg')}}"/>
+                  <img class="connection-icon23" alt="" src="{{url_for('static', filename='image/vector-35.svg')}}"/>
+                  <img class="sixth-connection-icons2" alt="" src="{{url_for('static', filename='image/vector-36.svg')}}"/>
+                  <img class="sixth-connection-icons3" alt="" src="{{url_for('static', filename='image/vector-37.svg')}}"/>
+                  <img class="sixth-connection-icons4" alt="" src="{{url_for('static', filename='image/vector-37.svg')}}"/>
+                  <img class="sixth-connection-icons5" alt="" src="{{url_for('static', filename='image/vector-37.svg')}}"/>
                 </div>
-                <img
-                  class="connection-icon24"
-                  alt=""
-                  src="{{url_for('static', filename='image/vector-40.svg')}}"
-                />
+                <img class="connection-icon24" alt="" src="{{url_for('static', filename='image/vector-40.svg')}}"/>
               </div>
               <div class="footer-content-wrapper">
-                <img
-                  class="footer-content-icon"
-                  loading="lazy"
-                  alt=""
-                  src="{{url_for('static', filename='image/frame.svg')}}"
-                />
+                <img class="footer-content-icon" loading="lazy" alt="" src="{{url_for('static', filename='image/frame.svg')}}"/>
               </div>
             </div>
           </div>
@@ -393,6 +192,11 @@
           window.location.href = "{{ url_for('chat_room', username='username') }}".replace('username', username);
         });
       }
+
+      document.getElementById("chatLink").addEventListener("click", function() {
+        const username = "helena-hills"; // 可以根据实际情况设置
+        window.location.href = `/chat-room/${username}`;
+      });
       </script>
   </body>
 </html>
