--- a/templates/chat-room.html
+++ b/templates/chat-room.html
@@ -71,7 +71,7 @@
                 </div>
                   <div class="conversation">
                       <a href="{{ url_for('chat_room', username='helena-hills') }}">
-                      <div class="avatar" data-user-id="helena-hills">
+                      <div class="avatar" data-username="helena-hills">
                         <img class="avatar-icon1" loading="lazy" alt="" src="{{url_for('static', filename='image/avatar-1@2x.png')}}"/>
                       </div>
                     </a>
@@ -85,7 +85,7 @@
 
                   <div class="conversation1">
                       <a href="{{ url_for('chat_room', username='oscar-davis') }}">
-                          <div class="avatar" data-user-id="oscar-davis">
+                          <div class="avatar" data-username="oscar-davis">
                               <img class="avatar-child" loading="lazy" alt="" src="{{url_for('static', filename='image/rectangle-1@2x.png')}}"/>
                           </div>
                       </a>
@@ -99,7 +99,7 @@
 
                   <div class="conversation2">
                     <a href="{{ url_for('chat_room', username='daniel-jay-park') }}">
-                      <div class="avatar" data-user-id="daniel-jay-park">
+                      <div class="avatar" data-username="daniel-jay-park">
                           <img class="avatar-icon2" alt="" src="{{url_for('static', filename='image/avatar-2@2x.png')}}"/>
                       </div>
                     </a>
@@ -113,7 +113,7 @@
 
                       <div class="conversation3">
                           <a href="{{ url_for('chat_room', username='mark-rojas') }}">
-                              <div class="avatar" data-user-id="mark-rojas">
+                              <div class="avatar" data-username="mark-rojas">
                                   <img class="avatar-icon3" alt="" src="{{url_for('static', filename='image/avatar-3@2x.png')}}"/>
                               </div>
                           </a>
@@ -127,7 +127,7 @@
 
                       <div class="conversation4">
                           <a href="{{ url_for('chat_room', username='giannis-constantinou') }}">
-                              <div class="avatar" data-user-id="giannis-constantinou">
+                              <div class="avatar" data-username="giannis-constantinou">
                                   <img class="avatar-icon4" loading="lazy" alt="" src="{{url_for('static', filename='image/avatar-4@2x.png')}}"/>
                               </div>
                           </a>
@@ -141,7 +141,7 @@
 
                       <div class="conversation5">
                           <a href="{{ url_for('chat_room', username='briana-lewis') }}">
-                              <div class="avatar" data-user-id="briana-lewis">
+                              <div class="avatar" data-username="briana-lewis">
                                   <img class="avatar-icon5" loading="lazy" alt="" src="{{url_for('static', filename='image/avatar-5@2x.png')}}"/>
                               </div>
                           </a>
@@ -155,7 +155,7 @@
 
                       <div class="conversation6">
                           <a href="{{ url_for('chat_room', username='mom') }}">
-                              <div class="avatar" data-user-id="mom">
+                              <div class="avatar" data-username="mom">
                                   <img class="avatar-icon6" loading="lazy" alt="" src="{{url_for('static', filename='image/avatar-6@2x.png')}}"/>
                               </div>
                           </a>
@@ -169,7 +169,7 @@
 
                       <div class="conversation7">
                           <a href="{{ url_for('chat_room', username='sherry-roy') }}">
-                              <div class="avatar" data-user-id="sherry-roy">
+                              <div class="avatar" data-username="sherry-roy">
                                   <img class="avatar-icon7" loading="lazy" alt="" src="{{url_for('static', filename='image/avatar-7@2x.png')}}"/>
                               </div>
                           </a>
